Make cache max size configurable via environment variable
Add XROOTD_CACHE_MAX_SIZE environment variable:
- Default: 1000 entries
- Configurable for different memory/usage requirements
- LRU eviction when limit exceeded

Updated files:
- src/cache.ts: Already supported maxSize parameter
- src/xrootd.ts: Pass maxSize to DirectoryCache
- src/index.ts: Read XROOTD_CACHE_MAX_SIZE env var
- README.md: Document new configuration option
- docs/CACHING.md: Add configuration examples
- docs/DOCKER.md: Include in environment variables
- AGENTS.md: Update configuration reference
- Dockerfile: Add default environment variable
- docker-compose.yml: Add to environment config

Use cases:
- Increase for systems accessing many directories
- Decrease for memory-constrained environments
- Tune based on usage patterns

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -17,6 +17,7 @@ services:
       # Optional: Caching configuration
       XROOTD_CACHE_ENABLED: ${XROOTD_CACHE_ENABLED:-true}
       XROOTD_CACHE_TTL: ${XROOTD_CACHE_TTL:-60}
+      XROOTD_CACHE_MAX_SIZE: ${XROOTD_CACHE_MAX_SIZE:-1000}
       
       # Node.js environment
       NODE_ENV: production
