--- a/package.json
+++ b/package.json
@@ -23,7 +23,8 @@
   "author": "",
   "license": "MIT",
   "dependencies": {
-    "@modelcontextprotocol/sdk": "^0.5.0"
+    "@modelcontextprotocol/sdk": "^0.5.0",
+    "jsroot": "^7.10.0"
   },
   "devDependencies": {
     "@types/node": "^20.19.24",
