--- a/package.json
+++ b/package.json
@@ -3,16 +3,16 @@
   "version": "0.1.0",
   "description": "MCP server for XRootD file access and management",
   "type": "module",
-  "main": "build/index.js",
+  "main": "build/src/index.js",
   "bin": {
-    "xrootd-mcp-server": "./build/index.js"
+    "xrootd-mcp-server": "./build/src/index.js"
   },
   "scripts": {
     "build": "tsc",
     "watch": "tsc --watch",
-    "test": "npm run build && node --test build/test/*.test.js",
+    "test": "npm run build && node --test build/test/**/*.test.js",
     "test:integration": "npm run test",
-    "test:coverage": "npm run build && c8 --reporter=text --reporter=lcov --reporter=json-summary node --test build/test/*.test.js",
+    "test:coverage": "npm run build && c8 --reporter=text --reporter=lcov --reporter=json-summary node --test build/test/**/*.test.js",
     "coverage": "npm run test:coverage"
   },
   "keywords": [
