--- a/package.json
+++ b/package.json
@@ -10,9 +10,9 @@
   "scripts": {
     "build": "tsc",
     "watch": "tsc --watch",
-    "test": "npm run build && node --test build/test/**/*.test.js",
+    "test": "npm run build && node --test 'build/test/**/*.test.js'",
     "test:integration": "npm run test",
-    "test:coverage": "npm run build && c8 --reporter=text --reporter=lcov --reporter=json-summary node --test build/test/**/*.test.js",
+    "test:coverage": "npm run build && c8 --reporter=text --reporter=lcov --reporter=json-summary node --test 'build/test/**/*.test.js'",
     "coverage": "npm run test:coverage"
   },
   "keywords": [
@@ -23,7 +23,7 @@
   "author": "",
   "license": "MIT",
   "dependencies": {
-    "@modelcontextprotocol/sdk": "^0.5.0",
+    "@modelcontextprotocol/sdk": "^0.7.0",
     "jsroot": "^7.10.0"
   },
   "devDependencies": {
